--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,44 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+body {
+  font-family: sans-serif;
+  line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+input {
+  outline: none;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 a:hover {
   color: #535bf2;
